<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, BanqueroActivity!</string>
    <string name="app_name">Banquero</string>
    <string name="algoritmo_banquero">Algoritmo del Banquero</string>
    <string name="version">Version 1.0</string>
    <string name="ingresar_datos">Ingresar Datos Simulación</string>
    <string name="comenzar_simulacion">Comenzar Simulación</string>
    <string name="acerca_de">Acerca De...</string>
    <string name="seleccione_una_opcion">Seleccione una Opción</string>
    <string name="cantidad_procesos">Cantidad de Procesos</string>
    <string name="cantidad_recursos">Cantidad de Recursos</string>
    <string name="aceptar_parametros_generales">Aceptar Parámetros Generales</string>
    <string name="seleccion_proceso">Procesos Disponibles</string>
    <string name="seleccione_recursos">Recursos Disponibles</string>
    <string name="set_recurso_maximo_proceso">Guardar Recurso Máximo Proceso</string>
    <string name="seleccione_proceso">Seleccione un proceso</string>
    <string name="recurso_maximo">Recurso Máximo Necesario</string>
    <string name="recurso_asignado">Recurso Asignado</string>
    <string name="finalizar_ingreso_datos">Finalizar Ingreso Datos</string>
    <string name="ingreso_cantidad_recursos_disponibles">Ingreso Cantidad Recursos Disponibles</string>
    <string name="setear_recurso_disponible">Setear Recurso disponible</string>
    <string name="ver_matrices">Ver Matrices</string>
    <string name="modo_tablas">Modo Tablas</string>
    <string name="matriz_recursos_maximos">Matriz de Recursos Máximos</string>
    <string name="matriz_recursos_disponibles">Matriz de Recursos Asignados</string>
    <string name="recursos_disponibles">Recursos Disponibles</string>
    <string name="cambio_a_modo_ingreso_datos">Cambio a Modo Ingreso de Datos</string>
    <string name="cambio_modo_a_ingreso_matrices">Cambio Modo a Ingreso Matrices</string>
    <string name="tipo_recurso">Tipo de Recurso</string>

</resources>