<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayoutMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayoutMenuTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewTituloMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/seleccione_una_opcion"
            android:textColor ="#5882FA"
            android:shadowColor="#5882FA"
    		android:shadowRadius="2.1"
			android:shadowDx="0"
			android:shadowDy="0"
    		android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/linearLayoutMenuBotones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/buttonDatosSimulacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickIngresarDatosSimulacion"
                android:text="@string/ingresar_datos" 
                
                android:shadowColor="#000000"
        		android:shadowDx="1.5"
        		android:shadowDy="1.5"
       			android:shadowRadius="2"
       			android:textColor="#FFFFFF"
       			android:textStyle="bold"
       			/>

            <Button
                android:id="@+id/buttonComenzarSimulacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickComenzarSimulacion"
                android:text="@string/comenzar_simulacion"
                android:shadowColor="#000000"
        		android:shadowDx="1.5"
        		android:shadowDy="1.5"
       			android:shadowRadius="2"
       			android:textColor="#FFFFFF"
       			android:textStyle="bold" />

            <Button
                android:id="@+id/button_acerca_de"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acerca_de" 
                android:onClick="onClickAcercaDe"
                android:shadowColor="#000000"
        		android:shadowDx="1.5"
        		android:shadowDy="1.5"
       			android:shadowRadius="2"
       			android:textColor="#FFFFFF"
       			android:textStyle="bold"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>