<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayoutIngresoDatos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayoutBotones"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/textViewCantidadProcesos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantidad_procesos"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textViewCantidadRecursos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="62dp"
            android:layout_toRightOf="@+id/textViewCantidadProcesos"
            android:text="@string/cantidad_recursos"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTextCantidadProcesos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/textViewCantidadProcesos"
            android:layout_below="@+id/textViewCantidadProcesos"
            android:inputType="number">
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextCantidadRecursos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewCantidadRecursos"
            android:layout_alignRight="@+id/textViewCantidadRecursos"
            android:layout_below="@+id/textViewCantidadRecursos"
            android:inputType="number" />

        <Button
            android:id="@+id/buttonAceptarParametrosGenerales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editTextCantidadProcesos"
            android:onClick="onClickAceptarParametrosGenerales"
            android:text="@string/aceptar_parametros_generales" />

        <Button
            android:id="@+id/buttonFinalizarIngresoDatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextCantidadRecursos"
            android:layout_marginLeft="52dp"
            android:layout_toRightOf="@+id/buttonAceptarParametrosGenerales"
            android:onClick="onClickFinalizarIngresoDatos"
            android:text="@string/finalizar_ingreso_datos" />

    </RelativeLayout>

    <ViewSwitcher
        android:id="@+id/viewSwitcherIngreso"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/relativeLayoutIngreso"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewSeleccionProceso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="66dp"
                android:text="@string/seleccion_proceso"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewRecursosDisponibles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="160dp"
                android:layout_toRightOf="@+id/textViewSeleccionProceso"
                android:text="@string/ingreso_cantidad_recursos_disponibles"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewCantidadRecursos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="88dp"
                android:layout_toRightOf="@+id/textViewRecursosDisponibles"
                android:text="@string/cantidad_recursos"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/spinnerProcesos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textViewSeleccionProceso"
                android:layout_below="@+id/textViewSeleccionProceso"
                android:layout_marginTop="45dp"
                android:layout_toLeftOf="@+id/textViewRecursosDisponibles"
                android:prompt="@string/seleccion_proceso" />

            <Spinner
                android:id="@+id/spinnerRecursos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/spinnerProcesos"
                android:layout_alignBottom="@+id/spinnerProcesos"
                android:layout_alignLeft="@+id/textViewRecursosDisponibles"
                android:layout_toLeftOf="@+id/textViewCantidadRecursos"
                android:prompt="@string/seleccione_recursos" />

            <EditText
                android:id="@+id/editTextCantidadRecursos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textViewCantidadRecursos"
                android:layout_alignRight="@+id/textViewCantidadRecursos"
                android:layout_alignTop="@+id/spinnerRecursos"
                android:inputType="number" />

            <Button
                android:id="@+id/buttonSetearRecursoMaximo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/spinnerRecursos"
                android:layout_marginTop="127dp"
                android:onClick="onClickSetearRecursoMaximo"
                android:text="@string/set_recurso_maximo_proceso" />

            <TextView
                android:id="@+id/textViewIngresoCantidadRecursosDisponibles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/buttonSetearRecursoMaximo"
                android:layout_below="@+id/editTextCantidadRecursos"
                android:layout_marginTop="92dp"
                android:text="@string/ingreso_cantidad_recursos_disponibles"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/buttonSetearRecursosDisponibles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/buttonSetearRecursoMaximo"
                android:layout_below="@+id/textViewIngresoCantidadRecursosDisponibles"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="83dp"
                android:onClick="onClickSetearRecursosDisponibles"
                android:text="@string/setear_recurso_disponible" />

            <EditText
                android:id="@+id/editTextIngresoRecursosDisponibles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textViewIngresoCantidadRecursosDisponibles"
                android:layout_alignRight="@+id/textViewIngresoCantidadRecursosDisponibles"
                android:layout_below="@+id/textViewIngresoCantidadRecursosDisponibles"
                android:inputType="number" />

            <RadioGroup
                android:id="@+id/radioGroupTipoRecurso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/buttonSetearRecursoMaximo"
                android:layout_alignRight="@+id/spinnerProcesos" >

                <RadioButton
                    android:id="@+id/radioButtonNecesario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/recurso_maximo" />

                <RadioButton
                    android:id="@+id/radioButtonAsignado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recurso_asignado" />
            </RadioGroup>

            <Spinner
                android:id="@+id/spinnerSeleccionRecursosDisponibles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/editTextIngresoRecursosDisponibles"
                android:layout_alignBottom="@+id/editTextIngresoRecursosDisponibles"
                android:layout_alignLeft="@+id/spinnerProcesos"
                android:layout_alignRight="@+id/radioGroupTipoRecurso"
                android:prompt="@string/seleccione_recursos" />

            <TextView
                android:id="@+id/textViewSeleccionRecursoDisponible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/editTextIngresoRecursosDisponibles"
                android:layout_toLeftOf="@+id/textViewRecursosDisponibles"
                android:text="@string/seleccione_recursos"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutTabla"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </RelativeLayout>

    </ViewSwitcher>

</LinearLayout>